--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FireStoreTutorials</string>
+    <string name="enter_title">Enter Title</string>
+    <string name="enter_thought">Enter Thought</string>
+    <string name="save">Save</string>
 </resources>
